// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component соответствует снимку для разных состояний 1`] = `
<div>
  <button
    class="button button-main"
  >
    Обычная
  </button>
</div>
`;

exports[`Button Component соответствует снимку для разных состояний 2`] = `
<div>
  <button
    class="button button-main disabled"
    disabled=""
  >
    Отключена
  </button>
</div>
`;

exports[`Button Component соответствует снимку для разных состояний 3`] = `
<div>
  <button
    class="button button-main hover"
  >
    Наведение
  </button>
</div>
`;
